# piibyebye

./: LICENSE  README.md  claude.md  pyproject.toml  requirements.txt
docs/: claude.md
pii/: app.py  cli.py  detector.py  detector_test.py  extractor.py  extractor_test.py  redactor.py  redactor_test.py  reviewer.py  reviewer_test.py
