[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "piibyebye"
version = "0.2.5"
description = "Local PII redaction tool for PDFs"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "cryptography>=42",
    "click>=8.1",
    "gradio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
pii = "pii.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["pii*"]

[tool.pytest.ini_options]
testpaths = ["pii"]
python_files = ["*_test.py"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".eggs", ".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pii"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [".*_test\\.py$"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true

